# ravatar

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  ct.yaml  index.yaml
.github/workflows/: build-and-push.yaml  lint-test-helm.yaml  release-helm.yaml  tests.yaml
helm/ravatar/: Chart.yaml  values.yaml
helm/ravatar/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  storage.yaml
helm/ravatar/templates/tests/: test-connection.yaml
src/: config.rs  image_processor.rs  io.rs  ldap.rs  main.rs  structs.rs  utils.rs
