[package]
name = "ravatar"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.10.6"
notify = "6.1.1"
sha2 = "0.10.8"
futures = "0.3.30"
image = "0.25.2"
filetime = "0.2.25"
actix-web = "4.9.0"
serde = { version = "1.0.210", features = ["derive"] }
env_logger = "0.11.5"
rayon = "1.10.0"
anyhow = "1.0.89"
log = "0.4.22"
rand = "0.8.5"
ldap3 = "0.11.4"
url = "2.5.0"
